@@ -1148,6 +1148,10 @@ enum
 
     SPR_G2_GIGA_RC_BOOSTER_NE_SW,
     SPR_G2_GIGA_RC_BOOSTER_NW_SE,
+    SPR_G2_GIGA_RC_POWERED_LIFT_0,
+    SPR_G2_GIGA_RC_POWERED_LIFT_1,
+    SPR_G2_GIGA_RC_POWERED_LIFT_2,
+    SPR_G2_GIGA_RC_POWERED_LIFT_3,
 
     SPR_G2_BM_BOOSTER_NE_SW,
     SPR_G2_BM_BOOSTER_NW_SE,
